# QT-CarAssistant

./: CMakeLists.txt  calculator.cpp  calculator.h  car.cpp  car.h  expense.cpp  expense.h  expenses.cpp  expenses.h  filemanager.cpp  filemanager.h  logger.h  main.cpp  mainmenuui.cpp  mainmenuui.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.ui  menu.cpp  menu.h  newcarform.cpp  newcarform.h  newcarform.ui  newexpenseform.cpp  newexpenseform.h  newexpenseform.ui  newfuelingform.cpp  newfuelingform.h  newfuelingform.ui  oilchange.cpp  oilchange.h  oilchange.ui  savemanager.cpp  savemanager.h  scrollarea.ui  service.cpp  service.h  statistics.h  (+2 more)
